# server

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  app.yaml  cloud_env.sample.yaml  database.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 063c3b120949_change_sky_weather_to_str.py  2bba06428b64_enum_lowercase.py  3d81f17e9d94_added_permissions.py  45695f3da903_add_actuator_lights.py  458e919b974d_removed_states.py  4d6a4c11c732_greenhouse_token.py  5a5c0c55c0a9_added_status.py  84b32d4a94bd_timezone_move.py  87c30bda988c_added_commands.py  9f40302a8718_irrigation_zone_index.py  9f879392463c_new_irrigation_zones.py  a57396427e37_remove_push_seconds.py  b3f4b12da61d_added_zone_names.py  cf2556777b23_add_valve.py  d0f08d126143_restart.py  d94947a9c5ff_added_recipes.py  e0ccdf55c173_add_irrigation.py  e723dd6623a9_long_lat_type_float.py  f5f7365d4ff4_change_quantum_to_float.py
database/: greenhouses_state.py  main.py  user.py  users_greenhouse.py
endpoints/: auth.py  greenhouse.py  greenhouse_command.py  greenhouse_state.py  main.py  session_manager.py  shared.py  users.py  utils.py
endpoints/client/: auth.py  greenhouse.py  greenhouse_command.py  greenhouse_state.py  main.py  shared.py  users.py  utils.py
endpoints/controller/: greenhouse.py  greenhouse_command.py  greenhouse_state.py  main.py  shared.py  utils.py
models/: command.py  greenhouse.py  greenhouses_state.py  user.py  users_greenhouse.py
