[tool.poetry]
name = "860008_proto2-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.2"
fastapi = "^0.79.0"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.39"
pydantic = {extras = ["email"], version = "^1.9.1"}
psycopg2-binary = "^2.9.6"
alembic = "^1.8.1"
google-auth = "^2.17.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
